--- a/index.ipynb
+++ b/index.ipynb
@@ -110,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = None"
+    "ba_latitude = -34.6037"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = -58.3816"
    ]
   },
   {
