--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighborhoods_"
+    "la_boca_marker = neighborhoods_marker[-1]"
    ]
   },
   {
